--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -15,3 +15,13 @@
 .footer-bottom{
     color: white!important;
 }
+
+.footer-style {
+    color:white;
+    text-decoration: none !important;
+}
+
+.footer-style:hover{
+    color: red;
+    text-decoration: none !important;
+}
