--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -151,3 +151,18 @@ body{
 .right-btn{
   float:right;
 }
+
+#addItem{
+  display: inline-block;
+  margin-right:10px;
+}
+
+.form-centered{
+  display: flex;
+  justify-content: center;
+}
+
+.btn-margin{
+  height:40px;
+  margin-top:30px !important;
+}
