--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -242,3 +242,12 @@ cursor:default!important;
   padding-left:0px!important;
   padding-right:0px!important;
 }
+
+.paper-image{
+  margin:20px auto;
+  max-width:400px;
+  min-width:300px;
+  text-align: center;
+  height:60px;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px !important;
+}
