Added Allergens to User Profile Update

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -16,7 +16,7 @@
     color: white!important;
 }
 
-.footer-style {
+.footer-style , .discard-up{
     color:white;
     text-decoration: none !important;
 }
