--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -251,3 +251,7 @@ cursor:default!important;
   height:60px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px !important;
 }
+
+.discard-up:hover{
+  color:white;
+}
