Add Social Media Integration and Meal Planner to Full Recipe

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -255,3 +255,8 @@ cursor:default!important;
 .discard-up:hover{
   color:white;
 }
+
+.same-line-components{
+  display:flex!important;
+  justify-content: center;
+}
